--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3980,6 +3980,9 @@
     <ClCompile Include="UVa\11400\11495.cpp">
       <Filter>UVa\11400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10991.cpp">
+      <Filter>UVa\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
