--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3983,6 +3983,12 @@
     <ClCompile Include="UVa\10900\10991.cpp">
       <Filter>UVa\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10700\10780.cpp">
+      <Filter>UVa\10700</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\11700\11733.cpp">
+      <Filter>UVa\11700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
