--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3989,6 +3989,9 @@
     <ClCompile Include="UVa\11700\11733.cpp">
       <Filter>UVa\11700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10301.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
