--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3995,6 +3995,9 @@
     <ClCompile Include="UVa\10300\10375.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10566.cpp">
+      <Filter>UVa\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
