--- a/.gitignore
+++ b/.gitignore
@@ -258,6 +258,9 @@ paket-files/
 /source.cpp
 /output.txt
 /input.txt
+/Greed-2.0-RC-7.1.0
+/TopCoder.jnlp
+/3pp
 
 # ignore DCJ files except my solutions and files I have changed.
 
