--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -81,6 +81,9 @@
     <Filter Include="UVa\11000">
       <UniqueIdentifier>{f61817d2-6cd5-460a-8124-7c3fc1cf3292}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UVa\200">
+      <UniqueIdentifier>{6f3c40ab-9731-4f67-b022-99fe147275c9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source.cpp">
@@ -157,6 +160,9 @@
     </ClCompile>
     <ClCompile Include="UVa\11000\11078.cpp">
       <Filter>UVa\11000</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\200\272.cpp">
+      <Filter>UVa\200</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
