--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -194,6 +194,9 @@
     <ClCompile Include="UVa\10100\10110.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10193.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
