--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -99,6 +99,9 @@
     <Filter Include="UVa\10200">
       <UniqueIdentifier>{3d0d83ea-6720-47bf-b8fb-3914f16e5f58}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UVa\12300">
+      <UniqueIdentifier>{60628359-1457-44ad-b301-c0ff2223c1ee}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source.cpp">
@@ -211,6 +214,12 @@
     </ClCompile>
     <ClCompile Include="UVa\10000\10041.cpp">
       <Filter>UVa\10000</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\200\299.cpp">
+      <Filter>UVa\200</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\12300\12372.cpp">
+      <Filter>UVa\12300</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
