--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -227,6 +227,9 @@
     <ClCompile Include="UVa\100\136.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\108.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
